# Policyholder-Call-Prediction

./: 01-data-processing-auto.py  01-data-processing.py  02-data-processing-nonauto.py  03-model-baseline-auto.py  03-model-baseline-nonauto.py  03-model-hurdle-auto.py  EDA.Rmd  README.md  column_description.txt  models.py  pyproject.toml
s1_data/: 01-data-processing-auto.py  02-data-processing-nonauto.py  __main__.py  a0_setup_directories.py  a1_load_raw_data.py  a2_data_imputation_auto.py  a2_data_imputation_nonauto.py  a2_data_prep_auto.py  a2_data_prep_nonauto.py  a3_eda.py  a3_eda_features.py  a4_baseline_modeldat_auto.py  a4_modeldat_baseline_auto.py  a4_modeldat_baseline_nonauto.py  a5_modeldat_hurdle_auto.py  a5_modeldat_hurdle_nonauto.py  data_description.txt  db_utils.py  gdrive_download.py  imputation_utils.py  transform_utils.py
s2_model/: __main__.py  a1_baseline_model.py  a1_models_baseline_auto.py  a1_models_baseline_nonauto.py  a2_models_hurdle_classification_auto.py  a2_models_hurdle_combined_auto.py  a2_models_hurdle_final_auto.py  a2_models_hurdle_stage1_logit.py  a2_models_hurdle_stage1_logit_auto.py  a3_models_hurdle_nb_auto.py  a3_models_hurdle_stage2_nb_auto.py  a4_models_hurdle_combined.py  models.py  results.txt
s3_validation/: __main__.py  a1_validation_hurdle_classification_auto.py  a2_validation_hurdle_count.py  a2_validation_hurdle_count_auto.py  a3_validation_hurdle_combined_auto.py  a4_validation_hurdle_val_metrics.py  model_evaluation.py  results.txt
s4_prediction/: __main__.py  a1_final_hurdle_stage1_logit.py  (+2 more)
