[project]
name = "travelers-policyholder-call"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5,<3.13"
dependencies = [
    "duckdb>=1.1.3",
    "gdown>=5.2.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.3",
    "scikit-learn==1.5.1",
    "seaborn>=0.13.2",
    "statsmodels==0.14.2",
]
